Drop-down spacing fix

--- a/themes/ume/sass/_page-prizes.scss
+++ b/themes/ume/sass/_page-prizes.scss
@@ -29,11 +29,7 @@
     h3 {
         text-transform: uppercase;
         font-size: 10px;
-<<<<<<< HEAD
-        color: white;
-=======
         color: $color__main-text;
->>>>>>> d687b7e851706bd5d54a2a6a1912f0c6e8f0a390
         font-family: $font__futura-bk;
         padding-bottom: 45px;
         margin: 0;
