--- a/themes/ume/sass/_search-dropdown.scss
+++ b/themes/ume/sass/_search-dropdown.scss
@@ -1,3 +1,6 @@
-.search-results .drop-down{
+.search-results .drop-down {
     margin-left: 0;
+    .meta {
+        text-align: left;
+    }
 }
