--- a/themes/ume/style.css
+++ b/themes/ume/style.css
@@ -261,12 +261,6 @@ th {
   font-style: normal; }
 
 /*--------------------------------------------------------------
-<<<<<<< HEAD
-# Typography
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-=======
->>>>>>> d687b7e851706bd5d54a2a6a1912f0c6e8f0a390
 # Elements
 --------------------------------------------------------------*/
 html {
@@ -350,12 +344,6 @@ textarea {
   width: 100%; }
 
 /*--------------------------------------------------------------
-<<<<<<< HEAD
-# Navigation
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-=======
->>>>>>> d687b7e851706bd5d54a2a6a1912f0c6e8f0a390
 # Accessibility
 --------------------------------------------------------------*/
 /* Text meant only for screen readers. */
@@ -689,13 +677,8 @@ main {
     width: 110px;
     height: 14px;
     border-width: 2px;
-<<<<<<< HEAD
-    border-color: white;
-    color: white;
-=======
     border-color: #fff;
     color: #fff;
->>>>>>> d687b7e851706bd5d54a2a6a1912f0c6e8f0a390
     font-family: Futura-Bk-Bt; }
     @media (min-width: 600px) {
       .site-header input.search-field {
@@ -844,11 +827,7 @@ main {
   .prizes h3 {
     text-transform: uppercase;
     font-size: 10px;
-<<<<<<< HEAD
-    color: white;
-=======
     color: #fff;
->>>>>>> d687b7e851706bd5d54a2a6a1912f0c6e8f0a390
     font-family: Futura-Bk-Bt;
     padding-bottom: 45px;
     margin: 0;
@@ -1447,11 +1426,7 @@ main {
           box-shadow: 0px 0px 8px 8px rgba(255, 255, 255, 0.6);
   font-size: 1.5rem;
   font-family: futura-bold;
-<<<<<<< HEAD
-  color: white; }
-=======
   color: #fff; }
->>>>>>> d687b7e851706bd5d54a2a6a1912f0c6e8f0a390
   @media (min-width: 600px) {
     .page-leaderboard .remaining-player .leader-ranking {
       position: relative;
@@ -2015,11 +1990,7 @@ main {
         .search-results .search-results-container .search-game .type-game .entry-title a {
           text-decoration: none;
           font-family: Futura-Bk-Bt;
-<<<<<<< HEAD
-          color: white; }
-=======
           color: #fff; }
->>>>>>> d687b7e851706bd5d54a2a6a1912f0c6e8f0a390
       .search .search-results-container .search-game .type-game .thumbnail-image img,
       .search-results .search-results-container .search-game .type-game .thumbnail-image img {
         width: 125px;
@@ -2291,15 +2262,7 @@ main {
         flex-wrap: wrap;
     display: grid;
     grid-template-areas: "title prizes" "img img" "img img" "img img" "meta program" "coins coins" "buttons design";
-<<<<<<< HEAD
     color: #fff;
-=======
-<<<<<<< HEAD
-    color: white;
-=======
-    color: #fff;
->>>>>>> d687b7e851706bd5d54a2a6a1912f0c6e8f0a390
->>>>>>> 569fa73fd0c29fa5d41d651fc902833708919cd4
     min-height: 453px;
     padding: 10px 30px;
     font-size: 14px;
@@ -2802,6 +2765,7 @@ main {
       padding: 1rem 0; } }
 
 .rainbow-game-container .featured-game:first-child h3 a, .rainbow-game-container .featured-game:nth-child(2) h3 a, .rainbow-game-container .featured-game:last-child h3 a {
+  font-family: Futura-Bk-Bt;
   color: #fff;
   font-family: Futura-Bk-Bt;
   text-decoration: none;
@@ -2843,3 +2807,5 @@ main {
 
 .search-results .drop-down {
   margin-left: 0; }
+  .search-results .drop-down .meta {
+    text-align: left; }
